--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
   /* --yellow: #ffc600; */
   --yellow: hsla(47, 100%, 50%, 1.0);
   --yellowlight: hsla(40, 10%, 95%, 0,5);
+  --blue: hsla(242, 100%, 34%, 1);
   --green: hsla(100, 100%, 45%, 1);
   --officialred: hsl(0, 76%, 40%);
   /* this red is brighter vvv */
@@ -90,7 +91,7 @@ header a:visited {
 }
 
 header a:hover {
-    color: var(--green);
+    color: var(--blue);
     text-shadow: 0 0 0 #000;
     position: relative;
     top: 2px;
@@ -98,7 +99,7 @@ header a:hover {
 }
 
 .current-page {
-  color: var(--green) !important;
+  color: var(--blue) !important;
   text-shadow: none;
   position: relative;
   top: 2px;
