--- a/assets/style.css
+++ b/assets/style.css
@@ -195,6 +195,44 @@ header a:hover {
   border-radius: 0px;
 }
 
+#summary-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  text-align: center;
+  /* background-color: var(--yellow); */
+  background-color: inherit;
+  padding: 20px;
+  grid-gap: 50px;
+  margin: auto;
+}
+
+.summary-badge {
+  /* background-color: hsl(0, 100%, 90%); */
+  width: 300px;
+  height: 200px;
+  margin: auto;
+  background-color: var(--yellow);
+  border: 5px solid var(--yellow);
+  border-radius: 3px;
+  box-shadow: 5px 5px;
+  text-decoration: none;
+  color: var(--black);
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+#summary-cards a:hover {
+  position: relative;
+  top: 5px;
+  left: 5px;
+  box-shadow: none;
+}
+
+.muted {
+  font-size: 20px;
+}
+
 #slackcard {
   color: white;
   /* background: hsla(50, 100%, 100%, 0.08); */
