add two collections: blog and guides

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,14 @@
   <header>
     <a href="/" class="title" style="color:white;">SUNY Potsdam ACM</a>
     <!-- UNFINISHED. update the classes, then make the changes to the css... -->
-    <a href="/about" style="grid-column: -6;">About</a>
-    <a href="/acmw" style="grid-column: -5;">ACM-W</a>
-    <a href="/join" style="grid-column: -4;">Join</a>
-    <a href="/org" style="grid-column: -3;">Eboard</a>
+    <a href="/about" style="grid-column: -8;">About</a>
+    <a href="/acmw" style="grid-column: -7;">ACM-W</a>
+    <a href="/join" style="grid-column: -6;">Join</a>
+    <a href="/org" style="grid-column: -5;">Eboard</a>
     <!-- <a href="/blog" style="grid-column: -3;">Blog</a> -->
-    <a href="/donate" style="grid-column: -2;">Donate</a>
+    <a href="/donate" style="grid-column: -4;">Donate</a>
+    <a href="/blog" style="grid-column: -3;">Blog</a>
+    <a href="/guides" style="grid-column: -2;">Guides</a>
   </header>
 
   <div id="content">
