--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/assets/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="/assets/main.js"></script>
+  <script src="/assets/jquery-3.3.1.min.js"></script>
   <title>{{ page.title }} {{ site.title }}</title>
 </head>
 
