--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <ul class="myposts" id="postlist">
-{% for post in site.posts %}
+  {% for post in items reversed %}
     <li><a href="{{ post.url }}">{{ post.title}}</a>
     <span class="postDate">{{ post.date | date: "%b %-d, %Y" }}</span>
     </li>
-{% endfor %}
+  {% endfor %}
 </ul>
