--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,9 @@ layout: default
 </article>
 <div class="post-iterator">
   {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title | truncatewords: 5 }}</a>
+    <a class="next" href="{{page.previous.url}}">{{page.previous.title | truncatewords: 5 }} &raquo;</a>
   {% endif %}
   {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">{{page.next.title | truncatewords: 5 }} &raquo;</a>
+    <a class="previous" href="{{page.next.url}}">&laquo; {{page.next.title | truncatewords: 5 }}</a>
   {% endif %}
 </div>
